--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "/myhomeDashboard/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,14 +13,23 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.3.1",
+    "@mui/material": "^6.4.11",
+    "@mui/x-data-grid": "^7.28.3",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
+    "lucide-react": "^0.503.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
+    "recharts": "^2.15.3",
     "simple-datatables": "^9.2.1",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
